<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity3">

    <TextView
        android:id="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/taskName"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TaskDef3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TaskDef3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edit_task"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Task"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Priority"
        android:layout_width="67dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:text="@string/priority2"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PriorityDef3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EstimatedTime"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:text="@string/estimated_time2"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TimeDef3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PriorityDef3"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/press_to_edit_priority2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toEndOf="@+id/Priority"
        app:layout_constraintTop_toBottomOf="@+id/TaskDef3" />

    <TextView
        android:id="@+id/TimeDef3"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:text="@string/press_to_edit_time2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EstimatedTime"
        app:layout_constraintTop_toBottomOf="@+id/PriorityDef3" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="8dp"
        android:onClick="Save"
        android:text="@string/save3"
        app:layout_constraintEnd_toStartOf="@+id/Cancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CancelReminder" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:onClick="Cancel"
        android:text="@string/cancel3"
        app:layout_constraintBaseline_toBaselineOf="@+id/Save"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView4"
        android:layout_width="380dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="335dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="addSub"
        android:text="@string/add_subgoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EstimatedTime"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <TextView
        android:id="@+id/SetReminder3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/SetRemind2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/SetDate3"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView4" />

    <TextView
        android:id="@+id/SetDate3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/set_date"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SetReminder3"
        app:layout_constraintEnd_toStartOf="@+id/setTime3" />

    <TextView
        android:id="@+id/setTime3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/SetTime"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SetDate3"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/CancelReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="CancelReminder"
        android:text="@string/cancel_reminder"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SetReminder3" />

</android.support.constraint.ConstraintLayout>