<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity2">

    <TextView
        android:id="@+id/AssignmentVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:text="@string/assignment"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/AssignmentDef"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AssignmentDef"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/press_to_edit_assignment"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/AssignmentVal"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/DueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/due_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/DueDateDef"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AssignmentVal" />

    <TextView
        android:id="@+id/DueDateDef"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/select_to_edit_date"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/DueDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="Save"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Cancel"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CancelRemind"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:onClick="Cancel"
        android:text="@string/cancel2"
        app:layout_constraintBaseline_toBaselineOf="@+id/Save"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/SetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/set_date"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/reminder"
        app:layout_constraintEnd_toStartOf="@+id/SetTime" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_one_time_reminder"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/SetDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DueDate" />

    <TextView
        android:id="@+id/SetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/set_time"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SetDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/CancelRemind"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:onClick="CancelRemind2"
        android:text="@string/cancel_reminder"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder" />

</android.support.constraint.ConstraintLayout>