<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="8dp"
        android:text="@string/task"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/PriorityDef"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PriorityDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/press_to_edit_task"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/Task"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:text="@string/priority"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/DueDateDef"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Task" />

    <TextView
        android:id="@+id/EstimatedTime"
        android:layout_width="143dp"
        android:layout_height="87dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="8dp"
        android:text="Estimated Time (Minutes)"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/TimeDef"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Priority" />

    <EditText
        android:id="@+id/DueDateDef"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/press_to_edit_priority"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/Priority"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/TimeDef"
        android:layout_width="206dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/press_to_edit_time"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/EstimatedTime"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="8dp"
        android:onClick="Save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EstimatedTime" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="Cancel"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Save" />
</android.support.constraint.ConstraintLayout>